changes according to reviewers' advice