@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,14 +31,8 @@
  * @build TestPinCaseWithTrace
  * @run driver jdk.test.lib.util.JavaAgentBuilder
  *      TestPinCaseWithTrace TestPinCaseWithTrace.jar
- * @run main/othervm/timeout=100 -Djdk.tracePinnedThreads=full TestPinCaseWithTrace
- * @run main/othervm/timeout=100 -javaagent:TestPinCaseWithTrace.jar TestPinCaseWithTrace
- * @run main/othervm/timeout=100 -Djdk.tracePinnedThreads=full -javaagent:TestPinCaseWithTrace.jar TestPinCaseWithTrace
+ * @run main/othervm/timeout=100  -Djdk.virtualThreadScheduler.maxPoolSize=1 -Djdk.tracePinnedThreads=full -javaagent:TestPinCaseWithTrace.jar TestPinCaseWithTrace
  */
-import java.util.concurrent.*;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
-
 import java.lang.instrument.ClassFileTransformer;
 import java.lang.instrument.IllegalClassFormatException;
 import java.lang.instrument.Instrumentation;
@@ -58,16 +52,15 @@ public class TestPinCaseWithTrace {
     }
 
     public static void main(String[] args) throws Exception{
-        ExecutorService scheduler = Executors.newFixedThreadPool(1);
-        Thread.Builder builder = TestPinCaseWithTrace.virtualThreadBuilder(scheduler);
-        Thread t1 = builder.name("vthread-1").start(() -> {
+        Thread t1 = Thread.ofVirtual().name("vthread-1").start(() -> {
             System.out.println("call native: " + nativeFuncPin(1));
         });
+        t1.join();
     }
 
     static int native2Java(int b) {
         try {
-            Thread.sleep(500); // try yield, will pin, javaagent+tracePinnedThreads will crash here (because of the class `PinnedThreadPrinter`)
+            Thread.sleep(500); // try yield, will pin, javaagent + tracePinnedThreads will crash here (because of the class `PinnedThreadPrinter`)
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -79,23 +72,5 @@ public class TestPinCaseWithTrace {
 
     static {
         System.loadLibrary("PinJNI");
-    }
-
-    private static Thread.Builder.OfVirtual virtualThreadBuilder(Executor scheduler) {
-        Thread.Builder.OfVirtual builder = Thread.ofVirtual();
-        try {
-            Class<?> clazz = Class.forName("java.lang.ThreadBuilders$VirtualThreadBuilder");
-            Constructor<?> ctor = clazz.getDeclaredConstructor(Executor.class);
-            ctor.setAccessible(true);
-            return (Thread.Builder.OfVirtual) ctor.newInstance(scheduler);
-        } catch (InvocationTargetException e) {
-            Throwable cause = e.getCause();
-            if (cause instanceof RuntimeException re) {
-                throw re;
-            }
-            throw new RuntimeException(e);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
     }
 }
